# horsie

./: .dockerignore  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: ci.yml  docker.yml  publish.yml  shellcheck.yml
actor/: Cargo.toml
agentcore/: Cargo.toml
agentcore/src/: agent.rs  error.rs  events.rs  lib.rs  provider.rs  secret.rs  testkit.rs
cli/: Cargo.toml
cli/src/: capabilities.rs  client.rs  config.rs  connect.rs  lib.rs  main.rs  plugins.rs  serve.rs  validate.rs
cli/src/capabilities/: default.linux.json  default.macos.json
cli/src/daemon/: mod.rs  protocol.rs
cli/tests/: connect_e2e.rs  sandbox_e2e.rs
clients/ts/: package.json  tsconfig.json
clients/web/: .gitignore  README.md  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
clients/web/e2e/: README.md  a-turn-basics.spec.ts  b-tool-call.spec.ts  c-ask-user.spec.ts  d-lifecycle.spec.ts  e-progress-ux.spec.ts  f-context-loading.spec.ts  fixtures.ts  g-openai-wire.spec.ts  global-setup.ts  global-teardown.ts  h-task-list.spec.ts  harness.ts  helpers.ts  i-history-pagination.spec.ts
clients/web/src/: App.tsx  index.css
docker/: docker-compose.yml  runtime.Dockerfile  server.Dockerfile
docs/: hackamore-demo.md  halter-demo.md
docs/guide/: README.md  getting-started.md  github.md  mcp-servers.md  runtime-vendors.md  self-hosting.md  sessions.md  settings-reference.md  skills-and-plugins.md
docs/superpowers/plans/: 2026-05-28-runtime-implementation.md  2026-05-30-horsie-cli-nono-impl.md  2026-05-31-agent-timers.md  2026-05-31-horsie-daemon-parallel-jobs.md  2026-05-31-live-skill-loading.md  2026-06-01-job-status-command.md  2026-06-01-multi-workspace.md  2026-06-01-shared-plugins-plan.md  2026-07-09-server-sessions.md  2026-07-11-github-server.md  2026-07-11-github-web-ui.md  2026-07-11-provision-pipeline.md  2026-07-12-db-managed-skill-bundles.md  2026-07-12-mcp-oauth.md  2026-07-12-mcp-server-support.md  2026-07-12-mcp-token-refresh-retry.md  2026-07-17-live-vendor-activation.md  2026-07-18-shared-local-runtime-vendor.md  2026-07-18-split-server-binary.md  2026-07-18-velos-vendor-connection-test.md  2026-07-20-frictionless-self-host.md  2026-07-20-provider-independence.md  2026-07-20-session-progress-ux.md
docs/superpowers/specs/: 2026-05-26-agentcore-design.md  2026-05-28-runtime-design.md  2026-05-28-workflow-design.md  2026-05-29-horsie-cli-nono-design.md  2026-05-31-agent-timers-design.md  2026-05-31-horsie-daemon-parallel-jobs-design.md  2026-05-31-live-skill-loading-design.md  2026-05-31-workspace-context-loading-design.md  2026-06-01-job-status-command-design.md  2026-06-01-multi-workspace-design.md  2026-06-01-shared-plugins-design.md  2026-07-09-server-sessions-design.md  2026-07-10-settings-ux-design.md  2026-07-10-velos-remote-runtime-vendor-design.md  2026-07-11-github-repos-design.md  2026-07-12-db-managed-skill-bundles-design.md  2026-07-12-mcp-server-support-design.md  2026-07-12-mcp-token-refresh-retry-design.md  (+15 more)
examples/: README.md  dev-workflow-capabilities.json  dev-workflow.json
examples/hackamore-demo/: capabilities.json  hackamore-config.json  mock-github.py  workflow.json
examples/halter-demo/: halter-config.json  mock-github.py  policy.reviewer-bot.json  workflow.json
executor/: Cargo.toml
executor-client/: Cargo.toml
executor-client/src/: client.rs  lib.rs  transport.rs  ws_transport.rs
executor/src/: connected_registry.rs  executor.rs  inmem_transport.rs  lib.rs  process_provider.rs  provider.rs  registry.rs  socket_transport.rs
executor/tests/: integration_test.rs
fluorite/: capabilities.fl  daemon.fl  executor.fl  runtime.fl  workflow.fl
mcp-client/: Cargo.toml
mcp-client/src/: client.rs  error.rs  lib.rs  transport.rs  types.rs
models/: Cargo.toml
models/fluorite/: capabilities.fl  daemon.fl  executor.fl  github.fl  mcp.fl  plugins.fl  runtime.fl  session.fl  session_api.fl  settings.fl
models/src/: lib.rs
providers/anthropic/: Cargo.toml
providers/anthropic/src/: lib.rs
providers/anthropic/tests/: integration.rs
providers/mock-llm/: Cargo.toml
providers/mock-llm/src/: lib.rs  main.rs  openai.rs  server.rs
providers/openai/: Cargo.toml
runtime/: Cargo.toml
runtime-client/: Cargo.toml
runtime-client/src/: client.rs  transport.rs
runtime-client/src/tools/: bash.rs  find_and_replace.rs  glob.rs  grep.rs  list_files.rs  mod.rs  read_file.rs  replace_lines.rs  write_file.rs
runtime/src/: lib.rs  main.rs  plugins.rs  plugins_fetch.rs  provision.rs  sandbox.rs  scan.rs  steps.rs  workspace.rs
runtime/src/tools/: bash.rs  find_and_replace.rs  glob.rs  grep.rs  list_files.rs  mod.rs  read_file.rs  replace_lines.rs  write_file.rs
runtime/tests/: provision_steps.rs
scripts/: install.sh
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_github.sql  0003_mcp.sql  0004_plugins.sql  0005_mcp_oauth.sql  0006_drop_api_key_env.sql
server/src/: handler.rs  lib.rs  registry.rs  server.rs
server/src/config/: mod.rs  store.rs
server/src/github/: api.rs  mod.rs  service.rs  store.rs
server/src/github/testdata/: test_rsa.pem
server/src/http/: config.rs  error.rs  github.rs  handlers.rs  mcp.rs  mod.rs  plugins.rs  runtime_connect.rs  sse.rs
server/src/mcp/: mod.rs  oauth.rs  service.rs  store.rs
server/src/plugins/: artifact.rs  ingest.rs  mod.rs  service.rs  store.rs  token.rs
server/src/sessions/: ask_tool.rs  events.rs  mod.rs  session_actor.rs  spec.rs  supervisor.rs  system_prompt.md
server/src/velos/: client.rs  mod.rs
supervisor/: Cargo.toml
supervisor/src/: hackamore.rs  halter.rs  history.rs  job_actor.rs  lib.rs  progress.rs  spec.rs  supervisor_actor.rs
supervisor/tests/: daemon_e2e.rs
tests/: Cargo.toml
tests/tests/: agent_e2e.rs  provider_conformance.rs  session_server_e2e.rs
workflow/: Cargo.toml
workflow/src/: agent_actor.rs  context.rs  lib.rs  mcp_toolbox.rs  task_list.rs  timers.rs  workflow_actor.rs  workspace.rs
workflow/tests/: workflow_e2e.rs  workspace_context.rs
(+34 files in other folders)
