[workspace]
members = [
    "actor",
    "agentcore",
    "workflow",
    "server",
    "executor",
    "executor-client",
    "runtime",
    "models",
    "providers/anthropic",
    "providers/mock-llm",
    "runtime-client",
    "mcp-client",
    "supervisor",
    "cli",
    "tests",
]
resolver = "2"

[workspace.dependencies]
fluorite         = "0.6.0"
fluorite_codegen = "0.6.0"
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
schemars         = "1.0"
derive-new       = "0.5"
async-trait      = "0.1"
thiserror        = "1.0"
tokio             = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "net", "time"] }
tokio-util        = { version = "0.7" }
tokio-stream      = { version = "0.1", features = ["sync"] }
tokio-tungstenite = "0.26"
futures-util      = "0.3"
uuid              = { version = "1", features = ["v4", "serde"] }
async-llm         = { version = "0.7.0", git = "https://github.com/zhxiaogg/async-anthropic.git", rev = "89217381f63dc66ff437415da3227032130e9714" }
axum              = { version = "0.7", features = ["macros"] }
tower-http        = { version = "0.5", features = ["fs"] }
parking_lot       = "0.12"
tracing           = "0.1"
reqwest           = { version = "0.12", features = ["json"] }
tempfile          = "3"
jsonschema        = "0.47"
jsonwebtoken      = "9"
base64            = "0.22"
sha2              = "0.10"
zip               = { version = "2", default-features = false, features = ["deflate"] }
eval              = "0.4"
# SQLite-backed settings store for the session server (Postgres-ready: add the
# `postgres` feature + a driver later). Runtime queries (no compile-time DB) +
# embedded migrations, so CI needs no DATABASE_URL.
sqlx              = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }

# Production code bans panic-prone constructs; test code opts out per-file via
# #![cfg_attr(test, allow(clippy::unwrap_used, ...))]
[workspace.lints.clippy]
unwrap_used             = "deny"
expect_used             = "deny"
panic                   = "deny"
wildcard_enum_match_arm = "deny"
