[package]
name = "horsie-actor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blossomstack/horsie"
description = "Actor primitives with durable journaling for horsie"
version = "0.1.1"
edition = "2024"

[features]
file-journal = ["dep:base64"]

[dependencies]
async-trait  = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
futures-util = { workspace = true }
parking_lot  = { workspace = true }
tracing      = { workspace = true }
base64       = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
