[package]
name = "horsie-agentcore"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blossomstack/horsie"
description = "Core agent abstractions for horsie"
version = "0.1.6"
edition = "2024"

[features]
# Exposes `testkit` (MockProvider, MockToolbox, CollectingEventSink) to other
# crates. agentcore's own unit tests get it via `cfg(test)` without the feature.
test-util = []

[dependencies]
horsie-models = { version = "0.1.6", path = "../models" }
async-trait = { workspace = true }
futures-util = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
jsonschema  = { workspace = true }

[lints]
workspace = true
