[package]
name = "horsie"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blossomstack/horsie"
description = "Sandboxed orchestration for LLM agent graphs"

[[bin]]
name = "horsie"
path = "src/main.rs"

[dependencies]
horsie-actor = { version = "0.1.4", path = "../actor", features = ["file-journal"] }
horsie-agentcore = { version = "0.1.4", path = "../agentcore" }
horsie-anthropic = { version = "0.1.4", path = "../providers/anthropic" }
horsie-executor = { version = "0.1.4", path = "../executor" }
horsie-executor-client = { version = "0.1.4", path = "../executor-client", default-features = false }
horsie-runtime-client = { version = "0.1.4", path = "../runtime-client" }
horsie-workflow = { version = "0.1.4", path = "../workflow" }
horsie-supervisor = { version = "0.1.4", path = "../supervisor" }
horsie-server = { version = "0.1.4", path = "../server" }
horsie-models = { version = "0.1.4", path = "../models" }
axum            = { workspace = true }
clap            = { version = "4", features = ["derive"] }
serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
tokio-util      = { workspace = true }
uuid            = { workspace = true }
thiserror       = { workspace = true }
async-trait     = { workspace = true }
tracing         = { workspace = true }
eval            = { workspace = true }

[dev-dependencies]
horsie-mock-llm = { path = "../providers/mock-llm" }
tempfile = "3"

[lints]
workspace = true
