[package]
name = "horsie-executor-client"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blossomstack/horsie"
description = "Client for the horsie executor"

[dependencies]
horsie-models = { version = "0.1.2", path = "../models" }
horsie-runtime-client = { version = "0.1.2", path = "../runtime-client" }
async-trait       = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true }
uuid              = { workspace = true }
serde_json        = { workspace = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util      = { workspace = true, optional = true }

[features]
default = ["ws"]
ws = ["dep:tokio-tungstenite", "dep:futures-util"]

[lints]
workspace = true
