[package]
name = "horsie-executor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blossomstack/horsie"
description = "Job executor for horsie"
version = "0.1.0"
edition = "2024"

[dependencies]
horsie-models = { version = "0.1.0", path = "../models" }
horsie-runtime-client = { version = "0.1.0", path = "../runtime-client" }
horsie-executor-client = { version = "0.1.0", path = "../executor-client", default-features = false }
tokio             = { workspace = true, features = ["process", "net"] }
tokio-tungstenite = { workspace = true }
futures-util      = { workspace = true }
serde_json        = { workspace = true }
uuid              = { workspace = true }
thiserror         = { workspace = true }
async-trait       = { workspace = true }
tokio-util        = { workspace = true }

[dev-dependencies]
horsie-server = { path = "../server" }
tempfile = "3"

[lints]
workspace = true
