[package]
name = "horsie-mcp-client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blossomstack/horsie"
description = "MCP (Model Context Protocol) client for horsie"
version = "0.1.6"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { workspace = true }
tokio       = { workspace = true }

[dev-dependencies]
axum = { workspace = true }

[lints]
workspace = true
