[package]
name = "horsie-models"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blossomstack/horsie"
description = "Protocol message types for horsie"
version = "0.1.4"
edition = "2024"

[dependencies]
fluorite   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
schemars   = { workspace = true }
derive-new = { workspace = true }

[build-dependencies]
fluorite_codegen = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
