[package]
name = "horsie-runtime-client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blossomstack/horsie"
description = "Client for the horsie runtime"
version = "0.1.1"
edition = "2024"

[dependencies]
horsie-models = { version = "0.1.1", path = "../models" }
horsie-agentcore = { version = "0.1.1", path = "../agentcore" }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }

[lints]
workspace = true
