[package]
name = "runtime"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
publish = false # internal application crate, never published to crates.io

[[bin]]
name = "horsie-runtime"
path = "src/main.rs"

[features]
default = ["sandbox"]
sandbox = ["dep:nono"]

[dependencies]
models        = { path = "../models" }
# In-process halter provisioning (replaces shelling out to the halter-agent binary).
# Pinned by rev so the provisioning ABI is reproducible.
halter-agent  = { git = "https://github.com/zhxiaogg/halter", rev = "9e16f4101acf3c69084daedf11fa4566a2d6420b" }
tokio         = { workspace = true, features = ["process", "net"] }
tokio-tungstenite = { workspace = true }
futures-util  = { workspace = true }
serde_json    = { workspace = true }
clap          = { version = "4", features = ["derive"] }
tracing       = { workspace = true }
regex         = "1"
glob          = "0.3"
# Upstream nono. The macOS SecurityServer TLS allow is injected as a capability rule
# (see cli/src/capabilities.rs), not a fork. default-features=false drops system-keyring.
nono          = { version = "0.62", default-features = false, optional = true }

[dev-dependencies]
tempfile      = "3"

[lints]
workspace = true
