[package]
name = "horsie-runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blossomstack/horsie"
description = "Sandboxed per-job runtime child for horsie"
version = "0.1.4"
edition = "2024"

[[bin]]
name = "horsie-runtime"
path = "src/main.rs"

[features]
default = ["sandbox"]
sandbox = ["dep:nono"]

[dependencies]
horsie-models = { version = "0.1.4", path = "../models" }
# In-process hackamore provisioning (replaces shelling out to the hackamore-agent binary).
# Pinned by rev so the provisioning ABI is reproducible.
hackamore-agent  = { version = "0.1.0", git = "https://github.com/zhxiaogg/hackamore", rev = "4b99c6272332132100dd92e92e1bf1471abe5f69" }
tokio         = { workspace = true, features = ["process", "net"] }
tokio-tungstenite = { workspace = true }
futures-util  = { workspace = true }
serde_json    = { workspace = true }
clap          = { version = "4", features = ["derive"] }
tracing       = { workspace = true }
regex         = "1"
glob          = "0.3"
# Upstream nono. The macOS SecurityServer TLS allow is injected as a capability rule
# (see cli/src/capabilities.rs), not a fork. default-features=false drops system-keyring.
nono          = { version = "0.62", default-features = false, optional = true }

[dev-dependencies]
tempfile      = "3"

[lints]
workspace = true
