[package]
name = "horsie-runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blossomstack/horsie"
description = "Sandboxed per-job runtime child for horsie"
version = "0.1.6"
edition = "2024"

[[bin]]
name = "horsie-runtime"
path = "src/main.rs"

[features]
default = ["sandbox"]
sandbox = ["dep:nono"]

[dependencies]
horsie-models = { version = "0.1.6", path = "../models" }
# In-process hackamore provisioning (replaces shelling out to the hackamore-agent binary).
# Pinned by rev so the provisioning ABI is reproducible.
hackamore-agent  = { version = "0.1.0", git = "https://github.com/blossomstack/hackamore", rev = "df526a5474e5a9e6296660365bc24f409ce3e66a" }
tokio         = { workspace = true, features = ["process", "net"] }
tokio-tungstenite = { workspace = true }
futures-util  = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
clap          = { version = "4", features = ["derive"] }
tracing       = { workspace = true }
regex         = "1"
glob          = "0.3"
base64        = { workspace = true }
reqwest       = { workspace = true }
sha2          = { workspace = true }
zip           = { workspace = true }
# Upstream nono. The macOS SecurityServer TLS allow is injected as a capability rule
# (see cli/src/capabilities.rs), not a fork. default-features=false drops system-keyring.
nono          = { version = "0.66", default-features = false, optional = true }

[dev-dependencies]
tempfile      = "3"
horsie-executor = { path = "../executor" }
tokio-util      = { workspace = true }

[lints]
workspace = true
