[package]
name = "horsie-server"
license = "MIT OR Apache-2.0"
version = "0.1.4"
edition = "2024"
publish = false # internal application crate, never published to crates.io

[features]
# Exposes `vendor::mock::MockVendor` to external test crates. Off by default, so
# a production build of horsie-server never contains a mock runtime vendor.
test-util = []

[dependencies]
horsie-models          = { path = "../models" }
horsie-actor           = { path = "../actor", features = ["file-journal"] }
horsie-agentcore       = { path = "../agentcore" }
horsie-anthropic       = { path = "../providers/anthropic" }
horsie-workflow        = { path = "../workflow" }
horsie-executor        = { path = "../executor" }
horsie-executor-client = { path = "../executor-client" }
horsie-runtime-client  = { path = "../runtime-client" }
horsie-mcp-client      = { path = "../mcp-client" }
sqlx              = { workspace = true }
axum              = { workspace = true }
tower-http        = { workspace = true }
tokio             = { workspace = true }
tokio-stream      = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util        = { workspace = true }
futures-util      = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
reqwest           = { workspace = true }
tracing           = { workspace = true }
uuid              = { workspace = true }
thiserror         = { workspace = true }
async-trait       = { workspace = true }
jsonwebtoken      = { workspace = true }
base64            = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower    = { version = "0.4", features = ["util"] }

[lints]
workspace = true
