[package]
name = "horsie-supervisor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blossomstack/horsie"
description = "Job supervision and orchestration core for horsie"
version = "0.1.1"
edition = "2024"

[dependencies]
horsie-actor = { version = "0.1.1", path = "../actor", features = ["file-journal"] }
horsie-agentcore = { version = "0.1.1", path = "../agentcore" }
horsie-workflow = { version = "0.1.1", path = "../workflow" }
horsie-executor = { version = "0.1.1", path = "../executor" }
horsie-executor-client = { version = "0.1.1", path = "../executor-client", default-features = false }
horsie-runtime-client = { version = "0.1.1", path = "../runtime-client" }
horsie-models = { version = "0.1.1", path = "../models" }
async-trait     = { workspace = true }
reqwest         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
tracing         = { workspace = true }
uuid            = { workspace = true }
futures-util    = { workspace = true }

[dev-dependencies]
horsie-mock-llm = { path = "../providers/mock-llm" }
horsie-anthropic = { path = "../providers/anthropic" }
axum         = { workspace = true }
tempfile     = "3"
futures-util = { workspace = true }

[lints]
workspace = true
