[package]
name = "integration-tests"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
publish = false # internal application crate, never published to crates.io

[dev-dependencies]
horsie-agentcore = { path = "../agentcore" }
horsie-anthropic = { path = "../providers/anthropic" }
horsie-mock-llm = { path = "../providers/mock-llm" }
tokio       = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util  = { workspace = true }
async-trait = { workspace = true }
serde_json  = { workspace = true }

[lints]
workspace = true
