[package]
name = "horsie-workflow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blossomstack/horsie"
description = "Agent workflow graphs for horsie"
version = "0.1.4"
edition = "2024"

[dependencies]
horsie-actor = { version = "0.1.4", path = "../actor" }
horsie-agentcore = { version = "0.1.4", path = "../agentcore" }
horsie-runtime-client = { version = "0.1.4", path = "../runtime-client" }
horsie-models = { version = "0.1.4", path = "../models" }
async-trait    = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tokio-util     = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }
eval           = { workspace = true }

[dev-dependencies]
horsie-mock-llm = { path = "../providers/mock-llm" }
horsie-anthropic = { path = "../providers/anthropic" }
futures-util = { workspace = true }
async-trait  = { workspace = true }

[lints]
workspace = true
