[package]
name = "horsie-anthropic"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blossomstack/horsie"
description = "Anthropic LLM provider for horsie"
version = "0.1.6"
edition = "2024"

[dependencies]
horsie-agentcore = { version = "0.1.6", path = "../../agentcore" }
horsie-models = { version = "0.1.6", path = "../../models" }
async-llm        = { workspace = true }
async-trait      = { workspace = true }
tokio            = { workspace = true, features = ["time"] }
tokio-stream     = { workspace = true }
serde_json       = { workspace = true }
tracing          = { workspace = true }
reqwest          = { workspace = true }

[dev-dependencies]
horsie-mock-llm = { path = "../mock-llm" }
tokio    = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
