[package]
name = "horsie-mock-llm"
license = "MIT OR Apache-2.0"
version = "0.1.3"
edition = "2024"
publish = false # internal application crate, never published to crates.io

[dependencies]
axum        = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
futures     = "0.3"
parking_lot = { workspace = true }
uuid        = { workspace = true }

[lints]
workspace = true
